tests/paczka1/small_fuzzy/57738092.err
Error in line 4: gbCJCOvAc S9e7 309,3
Error in line 2: gbCJCOvAc S987 89,4
Error in line 6: gbCJCOvAc A541 49,9
Error in line 13: wOsc9 A541 219,8
